--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ nav img {
     text-decoration: none;
     font-size: 13px;
 }
+
+.nav-links ul li::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #8030a9;
+    display: block;
+    margin: auto;
+}
