--- a/style.css
+++ b/style.css
@@ -87,3 +87,9 @@ nav img {
     position: relative;
     cursor: pointer;
 }
+
+.hero-btn:hover {
+    border: 1px solid #8030a9;
+    background: #8030a9;
+    transition: 1s;
+}
