--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ nav img {
     transition: 1s;
 }
 
+nav .fa {
+    display: none;
+}
+
 @media(max-width: 700px) {
     .text-box h1 {
         font-size: 20px;
@@ -111,5 +115,12 @@ nav img {
         right: 0;
         text-align: left;
         z-index: 2;
+    }
+    nav .fa {
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
     }
 }
