--- a/style.css
+++ b/style.css
@@ -142,10 +142,17 @@ h1 {
     font-size: 36px;
     font-weight: 600;
 }
+
 p {
     color: #777;
     font-size: 14px;
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
+}
+
+.row {
+    margin: 5%;
+    display: flex;
+    justify-content: space-between;
 }
