Add style to main-col class

--- a/style.css
+++ b/style.css
@@ -156,3 +156,12 @@ p {
     display: flex;
     justify-content: space-between;
 }
+
+.main-col {
+    flex-basis: 31%;
+    background: #faf3ff;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
