Add style to h3 tags

--- a/style.css
+++ b/style.css
@@ -165,3 +165,9 @@ p {
     padding: 20px 12px;
     box-sizing: border-box;
 }
+
+h3 {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
