--- a/style.css
+++ b/style.css
@@ -182,3 +182,10 @@ h3 {
         flex-direction: column;
     }
 }
+
+.mygems2 {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
