--- a/style.css
+++ b/style.css
@@ -189,3 +189,11 @@ h3 {
     text-align: center;
     padding-top: 50px;
 }
+
+.friends-col {
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
