Add hover effect to the layer class

--- a/style.css
+++ b/style.css
@@ -203,10 +203,15 @@ h3 {
 }
 
 .layer {
-    background: rgba(136, 0, 226, 0.7);
+    background: transparent;
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    transition: 0.5s;
+}
+
+.layer:hover {
+    background: rgba(136, 0, 226, 0.7);
 }
