--- a/style.css
+++ b/style.css
@@ -215,3 +215,14 @@ h3 {
 .layer:hover {
     background: rgba(136, 0, 226, 0.7);
 }
+
+.layer h3 {
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 26px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+}
