--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ h3 {
     }
 }
 
+/*--- My Gems ---*/
 .mygems2 {
     width: 80%;
     margin: auto;
@@ -231,6 +232,25 @@ h3 {
 }
 
 .layer:hover h3 {
+    bottom: 10%;
+    opacity: 1;
+}
+
+.layer p {
+    width: 100%;
+    font-weight: 500;
+    color: #fff;
+    font-size: 15px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.layer:hover p {
     bottom: 49%;
     opacity: 1;
 }
+
