--- a/style.css
+++ b/style.css
@@ -260,3 +260,17 @@ h3 {
     text-align: center;
     padding-top: 100px;
 }
+
+.dear-col {
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: justify;
+}
+
+.dear-col img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+
