--- a/style.css
+++ b/style.css
@@ -273,4 +273,13 @@ h3 {
     border-radius: 10px;
 }
 
+.dear-col p {
+    padding: 0;
+}
+
+.dear-col h3 {
+    margin-top: 16px;
+    margin-bottom: 15px;
+    text-align: center;
+}
 
