Edit description and add style to remarkable

--- a/style.css
+++ b/style.css
@@ -283,3 +283,12 @@ h3 {
     text-align: center;
 }
 
+/*-- remarkable ---*/
+
+.remarkable {
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+
