--- a/style.css
+++ b/style.css
@@ -322,3 +322,10 @@ h3 {
 .lines .fa {
     color: #8030a9;
 }
+
+@media(max-width: 700px) {
+    .lines img {
+        margin-left: 0px;
+        margin-right: 15px;
+    }
+}
