Add style to footer class and its h4 tag

--- a/style.css
+++ b/style.css
@@ -354,3 +354,17 @@ h3 {
         font-size: 24px;
     }
 }
+
+/*--- footer ----*/
+
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4 {
+    margin-bottom: 25px;
+    margin-top: 600;
+    font-weight: 600;
+}
