Add style to sub-header class

--- a/style.css
+++ b/style.css
@@ -375,3 +375,14 @@ h3 {
     cursor: pointer;
     padding: 18px 0;
 }
+
+/*---- about me ---*/
+.sub-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7)),(rgba(4,9,30,0.7)),url(images/background.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
