--- a/style.css
+++ b/style.css
@@ -390,3 +390,10 @@ h3 {
 .sub-header h1 {
     margin-top: 100px;
 }
+
+.about-me {
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
