Add style to about-col

--- a/style.css
+++ b/style.css
@@ -397,3 +397,12 @@ h3 {
     padding-top: 80px;
     padding-bottom: 50px;
 }
+
+.about-col {
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+
+.about-col img {
+    width: 100;
+}
