Change background image on blog.html

--- a/style.css
+++ b/style.css
@@ -430,3 +430,8 @@ h3 {
 .my-gems {
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background2.jpg);
 }
+
+/*--- blog --*/
+.blog {
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background3.jpg);
+}
