--- a/style.css
+++ b/style.css
@@ -455,3 +455,20 @@ h3 {
     font-weight: 600;
     margin: 30px 0;
 }
+
+.blog-left p {
+    color: #999;
+    padding: 0;
+}
+
+.blog-right {
+    flex-basis: 32%;
+}
+
+.blog-right h3 {
+    background: #8030a9;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px
+}
