--- a/style.css
+++ b/style.css
@@ -472,3 +472,12 @@ h3 {
     font-size: 16px;
     margin-bottom: 20px
 }
+
+.blog-right div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+}
