--- a/style.css
+++ b/style.css
@@ -491,3 +491,13 @@ h3 {
 .comment-box h3 {
     text-align: left;
 }
+
+.comment-form input, .comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
