Style the location class and iframe tag

--- a/style.css
+++ b/style.css
@@ -516,3 +516,13 @@ h3 {
 .contact {
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background4.jpg);
 }
+
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe {
+    width: 100%;
+}
