--- a/style.css
+++ b/style.css
@@ -526,3 +526,19 @@ h3 {
 .location iframe {
     width: 100%;
 }
+
+.contact-me {
+    width: 80%;
+    margin: auto;
+}
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
