Add style to icons

--- a/style.css
+++ b/style.css
@@ -542,3 +542,10 @@ h3 {
     align-items: center;
     margin-bottom: 40px;
 }
+
+.contact-col div .fa {
+    font-size: 28px;
+    color: #8030a9;
+    margin: 10px;
+    margin-right: 30px;
+}
