--- a/style.css
+++ b/style.css
@@ -560,3 +560,11 @@ h3 {
     color: #8030a9;
     font-weight: 400;
 }
+
+.contact-col input, .contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+}
