--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav .fa {
         display: block;
     }
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #8030a9;
         height: 100vh;
         width: 200px;
